fixed center align problem

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,9 @@ html,
 body {
   padding: 0;
   margin: 0;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background-color: orange;
